--- a/collectReward.css
+++ b/collectReward.css
@@ -119,7 +119,8 @@ p { font-family: 'WebFont', Arial, sans-serif; }
     position: absolute;
     width: 50%;
     right: 25%;
-    top: 20px;
+    top: 10px;
+    bottom: 10px
   }
 
   .comment {
@@ -137,7 +138,7 @@ p { font-family: 'WebFont', Arial, sans-serif; }
   }
   
   #certificateContainer {
-      height:370px;
+      height:480px;
       position: relative;
       display: flex;
       justify-content: center;
@@ -420,8 +421,20 @@ input[type=submit] {
   cursor: pointer;
   font-family: 'robotomedium';
 }
+input[type=button] {
+  background-color: #bafc03;
+  color: black;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'robotomedium';
+}
 
 input[type=submit]:hover {
+  background-color: #6e9600;
+}
+input[type=delete]:hover {
   background-color: #6e9600;
 }
 
